Dns record edit page improvements Change order of geo and healthcheck sections Hide healthcheck fallback options dropdowns unless enabled Change order and text of fallback option dropdowns Add border and background to the main section Fix theme of react-select dropdowns in dark mode to match native inputs Change size of first column for record ID and health checkbox Improve spacing between each record on mobile

--- a/pages/global.css
+++ b/pages/global.css
@@ -112,20 +112,20 @@ table.notaborder textarea {
 		background: transparent!important;
 	}
 	.select__control {
-	    background-color: #393939!important;
-	    border-color: var(--bs-gray-900)!important;
+	    background-color: #2c2f33!important;
+	    border-color: var(--bs-dark-text-emphasis)!important;
 	    transition: none!important;
 	}
 	.select__input {
 	    color: white!important;
 	}
 	.select__control:hover:not(.select__control--is-focused) {
-	    border-color: black!important;
+	    border-color: var(--bs-dark-text-emphasis)!important;
 	}
 	.select__control--is-focused,
 	.select__control--menu-is-open {
 	    box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25)!important;
-	    border-color: black!important;
+	    /* border-color: black!important; */
 	}
 	.select__multi-value {
 	    background-color: var(--bs-dark)!important;
@@ -136,18 +136,18 @@ table.notaborder textarea {
 	    color: #fff!important;
 	}
 	.select__menu {
-	    background-color: #393939!important;
+	    background-color: #2c2f33!important;
 	    border: 1px solid var(--bs-gray-900)!important;
 	}
 	.select__option {
-	    background-color: #393939!important;
+	    background-color: #2c2f33!important;
 
 	}
 	.select__option:hover {
 	    background-color: var(--bs-dark)!important;
 	}
 	.select__indicator-separator {
-	    background-color: #393939!important;
+	    background-color: #2c2f33!important;
 	}
 	.select__clear-indicator:hover {
 	    color: #fff!important;
